deploy: 0d6318282e6de791d4263d1cc7d1395ac1f9dcee

--- a/version_utils.html
+++ b/version_utils.html
@@ -64,10 +64,13 @@
       <li><a href="#is_openstack">is_openstack</a></li>
       <li><a href="#is_leap_migration">is_leap_migration</a></li>
       <li><a href="#is_tunneled">is_tunneled</a></li>
+      <li><a href="#is_bootloader_grub2">is_bootloader_grub2</a></li>
+      <li><a href="#is_bootloader_sdboot">is_bootloader_sdboot</a></li>
       <li><a href="#has_test_issues">has_test_issues</a></li>
       <li><a href="#package_version_cmp">package_version_cmp</a></li>
       <li><a href="#is_quarterly_iso">is_quarterly_iso</a></li>
       <li><a href="#get_version_id">get_version_id</a></li>
+      <li><a href="#is_community_jeos">is_community_jeos</a></li>
     </ul>
   </li>
   <li><a href="#POD-ERRORS">POD ERRORS</a></li>
@@ -317,6 +320,14 @@
 
 <p>Returns true if TUNNELED is set to 1</p>
 
+<h2 id="is_bootloader_grub2">is_bootloader_grub2</h2>
+
+<p>Returns true if the SUT uses GRUB2 as bootloader</p>
+
+<h2 id="is_bootloader_sdboot">is_bootloader_sdboot</h2>
+
+<p>Returns true if the SUT uses systemd-boot as bootloader</p>
+
 <h2 id="has_test_issues">has_test_issues</h2>
 
 <p>Returns true if test issues are present (i.e. is update tests are present)</p>
@@ -337,19 +348,23 @@
 
 <p>The default location that contains VERSION_ID is file /etc/os-release if nothing else is passed in to argument verid_file.</p>
 
+<h2 id="is_community_jeos">is_community_jeos</h2>
+
+<p>Returns true for tests using the images built by the &quot;JeOS&quot; package on OBS</p>
+
 <h1 id="POD-ERRORS">POD ERRORS</h1>
 
 <p>Hey! <b>The above document had some coding errors, which are explained below:</b></p>
 
 <dl>
 
-<dt id="Around-line-705">Around line 705:</dt>
+<dt id="Around-line-708">Around line 708:</dt>
 <dd>
 
 <p>&#39;=item&#39; outside of any &#39;=over&#39;</p>
 
 </dd>
-<dt id="Around-line-736">Around line 736:</dt>
+<dt id="Around-line-739">Around line 739:</dt>
 <dd>
 
 <p>You forgot a &#39;=back&#39; before &#39;=head2&#39;</p>
